# featherMD

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  index.html  issue.md  package-lock.json  package.json  version-bump.js  vite.config.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-pages.yml  dev.yml  perf.yml  release.yml
.jules/: bolt.md
artifacts/: bundle.md
artifacts/audit/: audit-01.md  audit2.md
artifacts/docs/: PRD.md  issue.md  release-logs.md
artifacts/sample/: mmd+tex.md  test.md
page/: index.html  script.js  styles.css
page/modules/: compiler.js  editor.js  effects.js  menu.js  theme.js
scripts/: generate-report.js  sync-page.js  version-bump.js
src/: editor.js  main.js  preview.js  settings.js  sync.js  themes.js  updater.js  utils.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/core/: config.js  file-io.js  keyboard.js  state.js  utils.js  welcome.js
src/editor/: editor.js
src/platform/: updater.js  window.js
src/preview/: preview.js
src/styles/: base.css  editor.css  preview.css  toolbar.css
src/styles/themes/: github-dark.css  github-light.css  gruvbox-dark.css  gruvbox-light.css  monokai.css  onyx.css  sepia.css  snow.css  solarized-dark.css  solarized-light.css
src/ui/: dialogs.js  divider.js  fullscreen.js  settings.js  status-bar.js  themes.js  toolbar.js
tests/: app.test.js  editor.test.js  html.test.js  performance.bench.js  preview.test.js  security.test.js  settings.test.js  sync.test.js  themes.test.js  toolbar.test.js
tests/core/: sync.test.js
tests/editor/: editor.test.js
tests/preview/: math-mermaid.test.js  preview.test.js
tests/ui/: fullscreen.test.js  settings.test.js  themes.test.js  toolbar.test.js
