[package]
name = "feathermd"
version = "1.2.2"
description = "A lightweight dual-pane markdown editor"
authors = ["Feather MD"]
edition = "2021"

[lib]
name = "feathermd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
